[COLOR orange][B]0.3.4[/B][/COLOR]
- Fix compatibility with XBMC 13 Gotham.

[COLOR orange][B]0.3.3[/B][/COLOR]
- Import from smuto.
- List new episodes.
