@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addons>
 <addon id="repository.xbmcpl" name="xbmcpl Addons" version="1.0.1" provider-name="xbmcpl">
-    <extension point="xbmc.addon.repository" name="xbmcpl Addons">
-        <info compressed="false">https://raw.github.com/Fisiu/xbmcpl/gotham/addons.xml</info>
-        <checksum>https://raw.github.com/Fisiu/xbmcpl/gotham/addons.xml.md5</checksum>
-        <datadir zip="false">https://raw.github.com/Fisiu/xbmcpl/gotham/download</datadir>
-        <hashes>false</hashes>
-    </extension>
-    <extension point="xbmc.addon.metadata">
-        <summary>xbmcpl Addon Repository</summary>
-        <description>xbmcpl addon repository for XBMC 13 Gotham.</description>
-        <disclaimer>The owners and submitters to this repository do not host or distribute any of the content displayed by these addons nor do they have any affiliation with the content providers.</disclaimer>
-        <platform>all</platform>
-    </extension>
+	<extension point="xbmc.addon.repository" name="xbmcpl Addons">
+		<info compressed="false">https://raw.github.com/Fisiu/xbmcpl/master/addons.xml</info>
+		<checksum>https://raw.github.com/Fisiu/xbmcpl/master/addons.xml.md5</checksum>
+		<datadir zip="false">https://raw.github.com/Fisiu/xbmcpl/master/download</datadir>
+		<hashes>false</hashes>
+	</extension>
+	<extension point="xbmc.addon.metadata">
+		<summary>xbmcpl Addon Repository</summary>
+		<description>xbmcpl addon repository for KODI.</description>
+		<disclaimer>The owners and submitters to this repository do not host or distribute any of the content displayed by these addons nor do they have any affiliation with the content providers.</disclaimer>
+		<platform>all</platform>
+	</extension>
 </addon>
 
 <addon id="plugin.video.ipla.pl"
-       name="ipla.tv"
-       version="0.3.4"
-       provider-name="xbmcpl">
-  <requires>
-    <import addon="xbmc.python" version="2.14.0"/>
-    <import addon="script.module.elementtree" version="1.2.7" />
-  </requires>
-  <extension point="xbmc.python.pluginsource"
-            library="default.py">
-        <provides>video</provides>
-  </extension>
-  <extension point="xbmc.addon.metadata">
-    <summary lang="en">Ipla - Internet TV</summary>
-    <summary lang="pl">Interaktywna platforma multimedialna.</summary>
-    <description lang="en">Watch videos from www.ipla.pl</description>
-    <description lang="pl">Ipla to największa telewizja internetowa w Polsce. Swoim widzom oferuje transmisje w wysokiej jakości, największą w Polsce legalną bazę treści, w tym tysiące odcinków seriali, programów rozrywkowych i informacyjnych, koncerty i najważniejsze wydarzenia sportowe, a także ponad tysiąc filmów pełnometrażowych. Dostęp do zasobów telewizji ipla mają użytkownicy różnych urządzeń dzięki aplikacjom ipla specjalnie do nich przystosowanym.</description>
-    <platform>all</platform>
-  </extension>
+	name="ipla.tv"
+	version="0.3.5"
+	provider-name="xbmcpl">
+	<requires>
+		<import addon="xbmc.python" version="2.14.0"/>
+		<import addon="script.module.elementtree" version="1.2.7" />
+	</requires>
+	<extension point="xbmc.python.pluginsource"
+		library="default.py">
+		<provides>video</provides>
+	</extension>
+	<extension point="xbmc.addon.metadata">
+		<summary lang="en">Ipla - Internet TV</summary>
+		<summary lang="pl">Interaktywna platforma multimedialna.</summary>
+		<description lang="en">Watch videos from www.ipla.pl</description>
+		<description lang="pl">Ipla to największa telewizja internetowa w Polsce. Swoim widzom oferuje transmisje w wysokiej jakości, największą w Polsce legalną bazę treści, w tym tysiące odcinków seriali, programów rozrywkowych i informacyjnych, koncerty i najważniejsze wydarzenia sportowe, a także ponad tysiąc filmów pełnometrażowych. Dostęp do zasobów telewizji ipla mają użytkownicy różnych urządzeń dzięki aplikacjom ipla specjalnie do nich przystosowanym.</description>
+		<platform>all</platform>
+	</extension>
 </addon>
 </addons>
