@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="repository.xbmcpl" name="xbmcpl Addons" version="1.0.1" provider-name="xbmcpl">
-    <extension point="xbmc.addon.repository" name="xbmcpl Addons">
-        <info compressed="false">https://raw.github.com/Fisiu/xbmcpl/gotham/addons.xml</info>
-        <checksum>https://raw.github.com/Fisiu/xbmcpl/gotham/addons.xml.md5</checksum>
-        <datadir zip="false">https://raw.github.com/Fisiu/xbmcpl/gotham/download</datadir>
-        <hashes>false</hashes>
-    </extension>
-    <extension point="xbmc.addon.metadata">
-        <summary>xbmcpl Addon Repository</summary>
-        <description>xbmcpl addon repository for XBMC 13 Gotham.</description>
-        <disclaimer>The owners and submitters to this repository do not host or distribute any of the content displayed by these addons nor do they have any affiliation with the content providers.</disclaimer>
-        <platform>all</platform>
-    </extension>
+	<extension point="xbmc.addon.repository" name="xbmcpl Addons">
+		<info compressed="false">https://raw.github.com/Fisiu/xbmcpl/master/addons.xml</info>
+		<checksum>https://raw.github.com/Fisiu/xbmcpl/master/addons.xml.md5</checksum>
+		<datadir zip="false">https://raw.github.com/Fisiu/xbmcpl/master/download</datadir>
+		<hashes>false</hashes>
+	</extension>
+	<extension point="xbmc.addon.metadata">
+		<summary>xbmcpl Addon Repository</summary>
+		<description>xbmcpl addon repository for KODI.</description>
+		<disclaimer>The owners and submitters to this repository do not host or distribute any of the content displayed by these addons nor do they have any affiliation with the content providers.</disclaimer>
+		<platform>all</platform>
+	</extension>
 </addon>
